added img folder for img classification task

--- a/workshop_eyemovements/image_classification/worksheet_eye_movement_analysis_v2.qmd
+++ b/workshop_eyemovements/image_classification/worksheet_eye_movement_analysis_v2.qmd
@@ -257,9 +257,9 @@ tr <- ds2$trial[[t]]
 
 # Build image path manually
 if (!is.na(tr$fake_image) && tr$fake_image == 1) {
-  imgpath <- file.path("..", "img", "fake", tr$img_name)
+  imgpath <- file.path(".", "img", "fake", tr$img_name)
 } else {
-  imgpath <- file.path("..", "img", "real", tr$img_name)
+  imgpath <- file.path(".", "img", "real", tr$img_name)
 }
 
 # Load PNG directly
@@ -386,9 +386,9 @@ fixtab
 
 ```{r, fig.align='center', fig.width=6.5, fig.height=5.5}
 if (!is.na(tr$fake_image) && tr$fake_image == 1) {
-  imgpath <- file.path("..", "img", "fake", tr$img_name)
+  imgpath <- file.path(".", "img", "fake", tr$img_name)
 } else {
-  imgpath <- file.path("..", "img", "real", tr$img_name)
+  imgpath <- file.path(".", "img", "real", tr$img_name)
 }
 
 img_r <- NULL
